--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'com.android.application'
   id 'kotlin-android'
+  id 'kotlin-android-extensions'
   id 'kotlin-kapt'
 }
 
@@ -50,20 +51,33 @@ android {
 dependencies {
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7"
+
   implementation 'androidx.core:core-ktx:1.3.2'
   implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'com.google.android.material:material:1.2.1'
-  implementation 'com.google.android.gms:play-services-maps:17.0.0'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
   implementation 'androidx.navigation:navigation-fragment:2.3.0'
   implementation 'androidx.navigation:navigation-ui:2.3.0'
   implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
   implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
   implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
   implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+  implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+  implementation 'com.google.android.material:material:1.2.1'
+
+  // Maps
+  implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
   // Multidex
   implementation 'androidx.multidex:multidex:2.0.1'
+
+  // glide
+  implementation 'com.github.bumptech.glide:glide:4.11.0'
 
   // Timber
   implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -85,6 +99,13 @@ dependencies {
   // for OkHttp3, if you're using an older version,
   // check the stetho website
   implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+
+  // FB login
+  implementation 'com.facebook.android:facebook-login:4.42.0'
+
+  // Google login
+  implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
 
 
   testImplementation 'junit:junit:4.+'
