--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sneyder.biznearby">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -40,7 +39,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.BizNearby">
-
+        <activity
+            android:name=".ui.add_business_image.AddBizImageActivity"
+            android:label="Vista previa"
+            android:screenOrientation="sensorPortrait"/>
+        <activity
+            android:name=".ui.pick_city.PickCityActivity"
+            android:label="Seleccionar ciudad"
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -55,7 +61,7 @@
 
         <activity
             android:name=".ui.pick_location.PickLocationActivity"
-            android:label="@string/title_activity_pick_location"/>
+            android:label="@string/title_activity_pick_location" />
         <activity
             android:name=".ui.login.LogInActivity"
             android:windowSoftInputMode="stateHidden" />
