--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
   implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
   implementation 'com.squareup.okio:okio:2.8.0'
+  implementation ('com.squareup.okhttp3:okhttp:3.12.0') {
+    force = true
+  }
 
   // Analise network traffic
   implementation 'com.facebook.stetho:stetho:1.5.1'
