--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
             android:label="@string/title_activity_pick_location" />
         <activity
             android:name=".ui.login.LogInActivity"
+            android:theme="@style/Theme.BizNearby"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ui.signup.SignUpActivity"
