--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,122 +1,128 @@
 plugins {
-  id 'com.android.application'
-  id 'kotlin-android'
-  id 'kotlin-android-extensions'
-  id 'kotlin-kapt'
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
-  compileSdkVersion 29
-  buildToolsVersion "29.0.3"
-  defaultConfig {
-    applicationId "com.sneyder.biznearby"
-    minSdkVersion 16
-    targetSdkVersion 29
-    versionCode 4
-    versionName "1.0.4"
-    multiDexEnabled true
-    vectorDrawables{
-      useSupportLibrary true
+    signingConfigs {
+        release {
+            storeFile file('C:\\Users\\sneyd\\Documents\\KeyPaths\\twismart.jks')
+            keyAlias 'biznearby'
+            storePassword 'rquanaergaxjwe'
+            keyPassword 'rquanaergaxjwe'
+        }
+    }
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
+    defaultConfig {
+        applicationId "com.sneyder.biznearby"
+        minSdkVersion 16
+        targetSdkVersion 29
+        versionCode 6
+        versionName "1.0.6"
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary true
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.release
     }
 
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
-  }
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
-  kotlinOptions {
-    jvmTarget = '1.8'
-  }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 
-  packagingOptions {
-    exclude 'META-INF/DEPENDENCIES'
-    exclude 'META-INF/LICENSE'
-    exclude 'META-INF/LICENSE.txt'
-    exclude 'META-INF/license.txt'
-    exclude 'META-INF/NOTICE'
-    exclude 'META-INF/NOTICE.txt'
-    exclude 'META-INF/notice.txt'
-    exclude 'META-INF/ASL2.0'
-    exclude 'META-INF/AL2.0'
-    exclude 'META-INF/LGPL2.1'
-    exclude("META-INF/*.kotlin_module")
-  }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
 
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
-  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7"
 
-  implementation 'androidx.core:core-ktx:1.3.2'
-  implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-  implementation 'androidx.navigation:navigation-fragment:2.3.0'
-  implementation 'androidx.navigation:navigation-ui:2.3.0'
-  implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-  implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-  implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-  implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-  implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-  implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0-beta01'
 
-  // Maps
-  implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    // Maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
-  // Multidex
-  implementation 'androidx.multidex:multidex:2.0.1'
+    // Multidex
+    implementation 'androidx.multidex:multidex:2.0.1'
 
-  // glide
-  implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
-  // Timber
-  implementation 'com.jakewharton.timber:timber:4.7.1'
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
-  // Dagger
-  implementation 'com.google.dagger:dagger:2.17'
-  implementation 'com.google.dagger:dagger-android-support:2.17'
+    // Dagger
+    implementation 'com.google.dagger:dagger:2.17'
+    implementation 'com.google.dagger:dagger-android-support:2.17'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 // dont change because it gives probllems in compile time
-  kapt 'com.google.dagger:dagger-compiler:2.17'
-  kapt 'com.google.dagger:dagger-android-processor:2.17'
+    kapt 'com.google.dagger:dagger-compiler:2.17'
+    kapt 'com.google.dagger:dagger-android-processor:2.17'
 
-  // Retrofit
-  implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-  implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
-  implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-  implementation 'com.squareup.okio:okio:2.8.0'
-  implementation ('com.squareup.okhttp3:okhttp:3.12.0') {
-    force = true
-  }
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okio:okio:2.8.0'
+    implementation('com.squareup.okhttp3:okhttp:3.12.0') {
+        force = true
+    }
 
-  // Analise network traffic
-  implementation 'com.facebook.stetho:stetho:1.5.1'
-  // for OkHttp3, if you're using an older version,
-  // check the stetho website
-  implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+    // Analise network traffic
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    // for OkHttp3, if you're using an older version,
+    // check the stetho website
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
-  // FB login, add sdk manually
+    // FB login, add sdk manually
 
-  // Google login
-  implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    // Google login
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
 
-
-  testImplementation 'junit:junit:4.+'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
